--- a/css/styles.css
+++ b/css/styles.css
@@ -62,11 +62,11 @@ padding: 0;
 box-sizing: border-box;
 }
 
-@media screen and (max-width:380px){
+/* @media screen and (max-width:380px){
 *{
 overflow-x: hidden;
 }
-}
+} */
 
 body {
 font-family: var(--ff-primary);
@@ -179,7 +179,7 @@ width: 95vw;
 width: 7rem;
 height: 0.25rem;
 margin-bottom: 2rem;
-background: var(--clr-blue);
+background: #f15025;
 margin-left: auto;
 margin-right: auto;
 transition: all 3s ease;
@@ -517,13 +517,118 @@ TEAM
 =========================
 */
 
+.team{
+  background: var(--clr-grey-9);
+}
+.member{
+  background: var(--clr-white);
+  margin-bottom: 3rem;
+  border-radius: var(--radius);
+  box-shadow: var(--light-shadow);
+  transition: var(--transition);
+}
+.member:hover{
+  transform: scale(1.01);
+  box-shadow: var(--dark-shadow);
+}
+.member-image{
+  height: 17rem;
+  object-fit: cover;
+  border-top-left-radius: var(--radius);
+  border-top-right-radius: var(--radius); 
+}
+.member-info{
+  text-align: center;
+  padding: 1rem 1.5rem 0.5rem;
+}
+.member-name{
+  color: var(--clr-green);
+  font-weight: bold;
+}
+.member-job{
+  text-transform: uppercase;
+  font-size: 1rem;
+  color: var(--clr-grey-7);
+}
+.member-social{
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.3rem;
+}
+.member-icon i{
+  color: var(--clr-green);
+  transition: var(--transition);
+  justify-self: center;
+}
+.member-icon:hover i{
+  color: var(--clr-dark-green);
+}
+@media screen and (min-width:676px){
+  .team-center{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 2rem;
+  }
+}
+@media screen and (min-width:992px){
+  .team-center{
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+
+
 
 /*
 =========================
 REVIEWS
 =========================
 */
+.reviews{
+  background: rgb(47,47,47);
+}
 
+.student{
+  position: relative;
+  background: var(--clr-grey-2);
+  text-align: center;
+  margin: 2rem 2rem;
+  margin-bottom: 10rem;
+  border-radius: var(--radius);
+  padding: 2rem;
+  height: 70%;
+  display: grid;
+  grid-template-rows: auto 1fr auto auto auto;
+}
+.student-icon{
+  color: var(--clr-green);
+  font-size: 3rem;
+}
+.student-text{
+  max-width: 27rem;
+  margin: 0 auto ;
+  color: var(--clr-platinum);
+}
+.student-name{
+  margin-top: 1rem;
+  color: var(--clr-green);
+  font-weight: 900;
+}
+.student-place{
+  text-transform: uppercase;
+  color: var(--clr-grey-8);
+  margin-bottom: 4rem;
+}
+.student-image{
+  /* margin-top: 7rem; */
+  width: 9rem!important;
+  border-radius: 50%;
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  bottom: 0%;
+  transform: translate(-50%,50%);
+}
 
 /*
 =========================
@@ -536,7 +641,8 @@ CONTACT
 }
 .contact-title{
 	color: var(--clr-blue);
-	font-family: var(--ff-tertiary);
+  font-family: var(--ff-tertiary);
+  text-transform: uppercase;
 }
 .contact-head{
 	display: grid;
@@ -571,7 +677,7 @@ CONTACT
 	border-top-left-radius: var(--radius);
 	border-top-right-radius: var(--radius);
 	color: var(--clr-white);
-	font-family: var(--ff-tertiary);
+	font-family: var(--ff-primary);
 }
 .form{
 	display: flex;
@@ -587,6 +693,9 @@ CONTACT
 	font-size: 1.1rem;
 	outline: none;
 }
+textarea::placeholder{
+  font-family: var(--ff-primary);
+}
 .form-btn{
 	margin: 1.5rem 0 1rem;
 	padding: 0.5rem 0;
@@ -599,9 +708,16 @@ CONTACT
 }
 @media screen and (min-width:776px){
 .contact-center{
+  margin-top: 5rem;
 	display: grid;
 	grid-template-columns: 60% 40%;
-	}
+  }
+  .contact-form{
+    align-self: center;
+  }
+  .contact-info{
+    align-self: center;
+  }
 }
 
 
