--- a/owl/owl.theme.default.css
+++ b/owl/owl.theme.default.css
@@ -16,18 +16,19 @@
 
 .owl-theme .owl-nav [class*='owl-'] {
   color: #FFF;
-  font-size: 14px;
+  font-size: 24px;
   margin: 5px;
   padding: 4px 7px;
   background: #D6D6D6;
   display: inline-block;
   cursor: pointer;
-  border-radius: 3px;
+  border-radius: 50%;
 }
 
 .owl-theme .owl-nav [class*='owl-']:hover {
-  background: #869791;
-  color: #FFF;
+  background: transparent;
+	color: #FFF;
+	outline: none;
   text-decoration: none;
 }
 
@@ -55,7 +56,7 @@
   width: 10px;
   height: 10px;
   margin: 5px 7px;
-  background: #D6D6D6;
+  background: #000;
   display: block;
   -webkit-backface-visibility: visible;
   transition: opacity 200ms ease;
@@ -64,5 +65,5 @@
 
 .owl-theme .owl-dots .owl-dot.active span,
 .owl-theme .owl-dots .owl-dot:hover span {
-  background: #869791;
+  background: #fff;
 }
