--- a/owl/owl.theme.default.css
+++ b/owl/owl.theme.default.css
@@ -25,12 +25,13 @@
   cursor: pointer;
   border-radius: 50%;
   transition: all 0.5s;
-  border: 2px solid #439A86;
+  border: 2px solid #243a52;
 }
 
 .owl-theme .owl-nav [class*='owl-']:hover {
   background: transparent;
-	color: #FFF;
+  border-color: #fff;
+	/* color: #439A86; */
 	outline: none;
   text-decoration: none;
 }
