--- a/css/styles.css
+++ b/css/styles.css
@@ -497,24 +497,32 @@ SERVICES
 =========================
 */
 
+
+
 .service{
-  display: grid;
-  grid-template-rows: 1fr 1fr;
-  gap: 0rem 1rem;
+	text-align: center;
+	height: 100%;
+	padding: 2rem 2.5rem;
+	
 }
-.service-image{
-  max-height: 17rem;
-  object-fit: cover;
-  margin-bottom: 0;
+.service-info{
+	display: grid;
+	grid-template-columns: 30% 1fr;
+	place-items: center;
+	column-gap: 3rem;
 }
 .service-title{
-  width: 100%;
-  text-align: center;
-  background: var(--clr-green);
-  color: var(--clr-white);
-  padding: 0.5rem 0;
-  margin-top: 0;
-  border-radius: var(--radius);
+	/* clip-path: circle(50% at 50% 50%); */
+	align-self: center;
+	padding: 6rem 4rem;
+	border-radius: 50%;
+	box-shadow: 34px 38px 9px -5px rgba(0,0,0,0.75);
+	background: red;
+	
+}
+.service-text{
+	align-self: center;
+	max-width: 40rem;
 }
 
 /*
@@ -613,7 +621,7 @@ REVIEWS
 	position: relative;
   background: var(--clr-grey-2);
   text-align: center;
-  margin: 2rem 2rem;
+  margin: 2rem;
   margin-bottom: 10rem;
   border-radius: var(--radius);
   padding: 2rem;
