--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+/* html{
+  scroll-behavior: smooth;
+  scroll-padding-top: 80px;
+} */
 
 /*
 ===============
@@ -142,12 +146,12 @@ line-height: 1;
 text-transform: uppercase;
 background: var(--clr-green);
 color: var(--clr-white);
-padding: 0.375rem 0.75rem;
+padding: 0.5rem 1rem;
 letter-spacing: var(--spacing);
 display: inline-block;
 font-weight: 700;
 transition: var(--transition);
-font-size: 0.9rem;
+font-size: 1rem;
 border: 2px solid var(--clr-green);
 cursor: pointer;
 box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
@@ -332,7 +336,7 @@ NAVBAR
 }
 
 .navBackground{
-  background: rgba(0,0,0,0.8);;
+  background: rgba(0,0,0,0.9);
 }
 
 
@@ -377,8 +381,9 @@ HERO
   color: var(--clr-green);
 }
 .hero-btn:hover{
-  background: var(--clr-green);
-  color: var(--clr-white);
+  background: var(--clr-black);
+  color: var(--clr-green);
+  border-color: var(--clr-green);
 }
 
 
@@ -406,6 +411,10 @@ SKILLS
 .skills-title{
   color: var(--clr-blue);
   margin-bottom: 4rem;
+  text-shadow: 1px 2px 1px var(--clr-black);
+}
+.skills-title h2{
+  text-transform: uppercase;
 }
 .skill{
   margin-bottom: 2rem;
@@ -506,12 +515,9 @@ SERVICES
   background: var(--clr-grey-9);
   text-align: center;
   border-radius: var(--radius);
-  margin: 2rem;
-  margin-bottom: 8rem;
-  height: 70%;
+  margin: 2rem 1rem;
   display: grid;
   grid-template-rows: auto 1fr;
-  row-gap: 0;
   box-shadow: 0 5px 15px rgba(67, 154, 134, 0.3);
   transition: var(--transition);
   }
@@ -520,7 +526,6 @@ SERVICES
   transform: scale(1.01);
   background: var(--clr-grey-10);
 }
-
 .service-title{
   background: var(--clr-green);
   border-top-left-radius:var(--radius) ;
@@ -534,9 +539,105 @@ SERVICES
 }
 
 .service-text{
-  padding: 1rem 2rem;
+  padding: 0.2rem 2rem;
   color: var(--clr-black);
   align-self: center;
+}
+@media screen and (min-width:768px){
+  .services-center{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media screen and (min-width:1080px){
+  .services-center{
+    max-width: 1400px;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 1rem;
+  }
+}
+
+
+
+
+/*
+=========================
+WORKS
+=========================
+*/
+
+.works{
+  background: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.5)), url('../images/work-bcg.jpg') center/cover no-repeat;
+  text-align: center;
+  min-height: 100vh;
+}
+.works-title{
+  text-shadow: 2px 2px 2px var(--clr-white);
+}
+.works-center{
+  max-width: 1400px;
+}
+.work{
+  position: relative;
+  overflow: hidden;
+  background: var(--clr-black);
+  margin: 2rem;
+  margin-bottom: 5rem;
+  border-radius: var(--radius);
+}
+.work-image{
+  height: 25rem;
+  object-fit: cover;
+  transition: var(--long-transition);
+}
+.work:hover .work-image{
+  opacity: 0.5;
+}
+.work-info{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
+  padding-bottom: 0;
+  align-self: center;
+  background: var(--clr-black);
+  margin-bottom: -10rem;
+  transition: all 1.2s;
+}
+.work:hover .work-info{
+  margin-bottom: 0;
+}
+#work-owner-sp{
+  font-family: var(--ff-primary);
+  font-size: 1.2rem;
+}
+.work-owner{
+  color: var(--clr-green);
+  font-family: var(--ff-tertiary);
+  font-size:2rem;
+  align-self: center;
+}
+.work-icon i{
+  font-size: 2.2rem;
+  transition: var(--transition);
+  color: var(--clr-green);
+}
+.work-icon:hover i{
+  color:#F24D6F;
+  transform: scale(1.2);
+}
+
+.works-btn{
+  margin-top: 2rem;
+  border-color: var(--clr-blue);
+  background: var(--clr-blue);
+  color: var(--clr-black);
+}
+.works-btn:hover{
+  background: var(--clr-black);
+  color: var(--clr-blue);
 }
 
 
@@ -545,11 +646,10 @@ SERVICES
 
 
 
-/*
-=========================
-PORTFOLIO
-=========================
-*/
+
+
+
+
 
 
 /*
@@ -557,6 +657,54 @@ PORTFOLIO
 STATS
 =========================
 */
+
+.stats{
+  background: var(--clr-grey-9);
+  min-height: 50vh;
+  margin-top: 0;
+}
+.stats-title{
+  padding-top: 4rem;
+  margin-top: 0;
+}
+.stat{
+    text-align: center;
+    margin-bottom: 2rem;
+}
+.stat-icon{
+    color: var(--clr-green);
+    font-size: 3rem;
+}
+.stat-number{
+    font-size: 2.8rem;
+    color: rgba(0, 0, 0, 0.8);
+    transition: var(--transition);
+    font-family: var(--ff-secondary);
+}
+.stat:hover .stat-number{
+    transform: scale(1.2);
+}
+.stat-title{
+    text-transform: capitalize;
+    font-size: 1.5rem;
+}
+
+.stats-center{
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+@media screen and (min-width:576px){
+  .stats-center{
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media screen and (min-width:992px){
+  .stats-center{
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
+
 
 
 /*
