--- a/css/styles.css
+++ b/css/styles.css
@@ -299,7 +299,7 @@ NAVBAR
     display: none;
   }
   .nav-links{
-    display: flex;
+    display: flex!important;
     justify-content: space-around;
     align-items: center;
     margin: 0.8rem;
