--- a/css/styles.css
+++ b/css/styles.css
@@ -443,7 +443,8 @@ SKILLS
   .skills-center{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    column-gap: 2rem;
+    -moz-column-gap: 2rem;
+         column-gap: 2rem;
   }
 }
 @media screen and (min-width:1080px){
@@ -465,7 +466,8 @@ ABOUT
   background: var(--clr-grey-1);
 }
 .about-img{
-  clip-path: polygon(60% 0, 100% 50%, 60% 100%, 0 100%, 0 0);
+  -webkit-clip-path: polygon(60% 0, 100% 50%, 60% 100%, 0 100%, 0 0);
+          clip-path: polygon(60% 0, 100% 50%, 60% 100%, 0 100%, 0 0);
   max-height: 35rem;
 }
 .about-info{
@@ -553,7 +555,8 @@ SERVICES
   .services-center{
     max-width: 1400px;
     grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 1rem;
+    -moz-column-gap: 1rem;
+         column-gap: 1rem;
   }
 }
 
@@ -588,7 +591,8 @@ WORKS
 }
 .work-image{
   height: 25rem;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   transition: var(--long-transition);
 }
 .work:hover .work-image{
@@ -665,7 +669,8 @@ TEAM
 }
 .member-image{
   height: 17rem;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-top-left-radius: var(--radius);
   border-top-right-radius: var(--radius); 
 }
@@ -699,7 +704,8 @@ TEAM
   .team-center{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    column-gap: 2rem;
+    -moz-column-gap: 2rem;
+         column-gap: 2rem;
   }
 }
 @media screen and (min-width:992px){
@@ -830,6 +836,18 @@ CONTACT
 	border-bottom: 2px solid var(--clr-green);
 	font-size: 1.1rem;
 	outline: none;
+}
+textarea::-webkit-input-placeholder{
+  font-family: var(--ff-primary);
+}
+textarea::-moz-placeholder{
+  font-family: var(--ff-primary);
+}
+textarea:-ms-input-placeholder{
+  font-family: var(--ff-primary);
+}
+textarea::-ms-input-placeholder{
+  font-family: var(--ff-primary);
 }
 textarea::placeholder{
   font-family: var(--ff-primary);
